authorization-policy/k8s/deployment-app-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  namespace: authorization-policy
spec:
  selector:
    matchLabels:
      app: app-a
  template:
    metadata:
      labels:
        app: app-a
    spec:
      serviceAccountName: sa-app-a
      containers:
        - name: app-a
          image: algab/poc-istio-app-a:1.0
          resources:
            limits:
              memory: "32Mi"
              cpu: "125m"
          ports:
            - containerPort: 3000
