authorization-policy/k8s/deployment-app-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: authorization-policy
spec:
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      serviceAccountName: sa-app-b
      containers:
        - name: app-b
          image: algab/poc-istio-authorization-policy-app-b:1.0
          resources:
            limits:
              memory: "100Mi"
              cpu: "200m"
          ports:
            - containerPort: 3001
