authorization-policy/k8s/deployment-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: authorization-policy
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      serviceAccountName: sa-gateway
      containers:
        - name: gateway
          image: algab/poc-istio-authorization-policy-gateway:1.0
          resources:
            limits:
              memory: "100Mi"
              cpu: "200m"
          ports:
            - containerPort: 3003
