authorization-policy/k8s/service-app-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-a
  namespace: authorization-policy
spec:
  selector:
    app: app-a
  ports:
    - port: 80
      targetPort: 3000
