authorization-policy/k8s/service-app-c.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-c
  namespace: authorization-policy
spec:
  selector:
    app: app-c
  ports:
    - port: 80
      targetPort: 3002
