authorization-policy/k8s/service-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-front
  namespace: authorization-policy
spec:
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 80
