authorization-policy/k8s/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-gateway
  namespace: authorization-policy
spec:
  selector:
    app: gateway
  ports:
  - port: 80
    targetPort: 3003
