authorization-policy/k8s/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-authorization-policy-front
  namespace: authorization-policy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/front)$ $1/ redirect;
spec:
  tls:
    - hosts:
        - "authorization-policy.poc-istio.local"
      secretName: tls-authorization-policy
  rules:
    - host: "authorization-policy.poc-istio.local"
      http:
        paths:
          - path: /front(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service-front
                port:
                  number: 80
