authorization-policy/k8s/policy-app-a.yaml
apiVersion: "security.istio.io/v1"
kind: "AuthorizationPolicy"
metadata:
  name: "allow-policy-app-a"
  namespace: authorization-policy
spec:
  selector:
    matchLabels:
      app: app-a
  action: DENY
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/authorization-policy/sa/sa-app-b"]
      to:
        - operation:
            methods: ["*"]
