authorization-policy/k8s/policy-app-b.yaml
apiVersion: "security.istio.io/v1"
kind: "AuthorizationPolicy"
metadata:
  name: "policy-app-b"
  namespace: authorization-policy
spec:
  selector:
    matchLabels:
      app: app-b
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              [
                "cluster.local/ns/authorization-policy/sa/sa-gateway",
                "cluster.local/ns/authorization-policy/sa/sa-app-a",
              ]
      to:
        - operation:
            methods: ["*"]
